# ghost-stops

./: .env.example  .gitignore  Anchor.toml  README.md  VENDORED.md  package-lock.json  package.json  railway.json
.playwright-mcp/: page-2026-06-13T01-15-09-017Z.yml
apps/web/: .env.example  README.md  package.json
apps/web/app/: globals.css  landing.css  layout.tsx  opengraph-image.tsx  page.tsx  terminal.css
apps/web/app/app/: page.tsx
apps/web/components/: action-zone.tsx  app.tsx  ghost-mark.tsx  ghost-panel.tsx  market-drawer.tsx  price-chart.tsx  sheet.tsx  token-logo.tsx  top-bar.tsx  trade-terminal.tsx
apps/web/components/gummy/: ghost.tsx  gummy-chart.tsx  gummy-terminal.tsx  order-card.tsx
apps/web/components/landing/: landing-page.tsx
apps/web/components/terminal/: panel.tsx  (+10 more)
apps/web/lib/: enable.ts  flash.ts  format.ts  funds.ts  ghost.ts  hooks.ts  market-stats.ts  session.ts  sound.ts  use-price-history.ts  use-sound.ts
docs/: design-brief.md
docs/research/: decision-brief.md  gap-answers.md  probe-results.md  research-findings.md
programs/ghost-stops/: Cargo.toml
programs/ghost-stops/src/: lib.rs
scripts/: api-test.ts  check-wallet.mjs  discover-feeds.ts  live-test.ts  probe-lifecycle.ts  probe-oracle.ts  probe-quote.ts  probe-session.ts  probe-settle.ts  probe-submit.ts  smoke-flash.ts  test-auth.ts  test-program.ts
scripts/lib/: wallet.ts
services/executor/: package.json
services/executor/idl/: ghost_stops.json
services/executor/src/: config.ts  engine.test.ts  engine.ts  flash-exec.ts  index.ts  orders.ts  sessions.ts
(+3 files in other folders)
